<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.thomas-oster</groupId>
    <artifactId>visicut</artifactId>
    <version>1.9-SNAPSHOT</version>
    <name>VisiCut</name>
    <packaging>jar</packaging>
    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.11</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.github.sarxos</groupId>
            <artifactId>webcam-capture</artifactId>
            <version>0.3.12</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.scribe</groupId>
            <artifactId>scribe</artifactId>
            <version>1.3.7</version>
        </dependency>
        <dependency>
            <groupId>org.kabeja</groupId>
            <artifactId>kabeja</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>org.kabeja</groupId>
            <artifactId>kabeja-svg</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>org.kabeja</groupId>
            <artifactId>kabeja-xslt</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf</artifactId>
            <version>2.1.6.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>guru.nidi.com.kitfox</groupId>
            <artifactId>svgSalamander</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.1</version>
            <type>jar</type>
        </dependency>
        <!-- Needed?
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE111</version>
        </dependency -->
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>appframework</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>beansbinding</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>liblasercut</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>1.4.19</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>gov.nist.math</groupId>
            <artifactId>jama</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.freehep</groupId>
            <artifactId>freehep-psviewer</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-dom</artifactId>
            <version>1.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-svggen</artifactId>
            <version>1.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
            <type>jar</type>
        </dependency>
        <!-- needed for kabjex/dxf support? -->
        <dependency>
            <groupId>com.neuronrobotics</groupId>
            <artifactId>JCSG</artifactId>
            <version>0.5.3</version>
        </dependency>
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    
    <build>
        <plugins>
            <plugin>
                <!-- install non-maven dependencies from legacy folder -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <executions>
                    <execution>
                        <id>install-external-kabeja</id>
                        <phase>initialize</phase>
                        <configuration>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>org.kabeja</groupId>
                            <artifactId>kabeja</artifactId>
                            <version>0.4</version>
                            <file>${project.basedir}/legacy/kabeja-0.4.jar</file>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>install-external-kabeja-svg</id>
                        <phase>initialize</phase>
                        <configuration>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>org.kabeja</groupId>
                            <artifactId>kabeja-svg</artifactId>
                            <version>0.4</version>
                            <file>${project.basedir}/legacy/kabeja-svg-0.4.jar</file>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>install-external-kabeja-xslt</id>
                        <phase>initialize</phase>
                        <configuration>
                            <repositoryLayout>default</repositoryLayout>
                            <groupId>org.kabeja</groupId>
                            <artifactId>kabeja-xslt</artifactId>
                            <version>0.4</version>
                            <file>${project.basedir}/legacy/kabeja-xslt.jar</file>
                            <packaging>jar</packaging>
                            <generatePom>true</generatePom>
                        </configuration>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <!-- set main class -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>de.thomas_oster.visicut.gui.VisicutApp</mainClass>
                        </manifest>
                        <manifestEntries>
                            <SplashScreen-Image>de/thomas_oster/visicut/gui/resources/splash.png</SplashScreen-Image>
                            <!-- Avoid "Illegal reflective access" errors, see https://stackoverflow.com/a/62629201 for how to find the module and package names corresponding to a certain error message. See https://stackoverflow.com/questions/70196098/how-can-i-specify-add-opens-from-a-project-level-and-make-sure-it-is-taken-int for further discussion. -->
                            <Add-Opens>
                                <!-- for org.dom4j.... (on Java11 only, not on Java 17?)"-->
                                java.xml/com.sun.org.apache.xerces.internal.parsers
                                <!-- loading of GTK icons on Linux (PlatformIcon class) -->
                                java.desktop/sun.awt
                                <!-- XStream (load/save settings)-->
                                java.base/java.util java.desktop/java.awt.geom <!-- definitely needed to save/read settings on all platforms -->
                                java.desktop/java.awt <!-- definitely needed to save settings.private.xml on Windows (and others?) -->
                                java.base/java.lang java.base/java.io java.base/java.text java.base/java.time java.base/java.time.chrono java.base/java.util java.base/java.util.concurrent <!-- snake-oil, just to be sure, from https://github.com/x-stream/xstream/issues/262#issuecomment-1247342505 -->
                            </Add-Opens>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            
            <!-- build fat jar-with-dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                    <configuration>
                       <shadedArtifactAttached>true</shadedArtifactAttached>
                       <shadedClassifierName>full</shadedClassifierName>
                    </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>